--- a/style.css
+++ b/style.css
@@ -12,6 +12,131 @@ body {
   background: rgb(229, 244, 250);
 }
 
+.header {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+.header .logo {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+.header .logo span {
+  font-weight: normal;
+}
+.header .nav {
+  flex-grow: 1;
+  margin-left: 50px;
+}
+.header .nav ul {
+  display: flex;
+  gap: 15px;
+  list-style: none;
+  display: block;
+}
+.header .nav ul li a {
+  text-decoration: none;
+  color: #333;
+  opacity: 0.7;
+}
+.header .nav ul li a:hover {
+  opacity: 1;
+}
+.header .header-right {
+  display: flex;
+  gap: 15px;
+}
+.header .header-right .analytics, .header .header-right .reserve {
+  text-decoration: none;
+  color: #333;
+  padding: 5px 10px;
+  border: 1px solid #333;
+  border-radius: 5px;
+  opacity: 0.7;
+}
+.header .header-right .analytics:hover, .header .header-right .reserve:hover {
+  opacity: 1;
+}
+
+.main-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+}
+.main-section .main-title {
+  font-size: 3em;
+  line-height: 1.2;
+  font-weight: bold;
+  color: #333;
+}
+.main-section .sub-text {
+  font-size: 1.2em;
+  margin-top: 10px;
+  color: #666;
+}
+
+.loyalty-section {
+  background-color: #111;
+  color: #eee;
+  padding: 100px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  position: relative;
+}
+.loyalty-section .content-wrapper {
+  max-width: 800px;
+  text-align: left;
+  position: relative;
+}
+.loyalty-section .section-title {
+  font-size: 3em;
+  font-weight: bold;
+  position: absolute;
+  top: 20px;
+  right: 0;
+  color: rgba(255, 255, 255, 0.2);
+}
+.loyalty-section .content-text {
+  margin-top: 80px;
+}
+.loyalty-section .content-text h3 {
+  font-size: 1.5em;
+  font-weight: bold;
+  color: #fff;
+  margin-bottom: 20px;
+}
+.loyalty-section .content-text ul {
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 20px;
+}
+.loyalty-section .content-text ul li {
+  margin-bottom: 10px;
+  font-size: 1em;
+  color: #ccc;
+  position: relative;
+  padding-left: 20px;
+}
+.loyalty-section .content-text ul li::before {
+  content: "•";
+  position: absolute;
+  left: 0;
+  color: #888;
+}
+.loyalty-section .content-text p {
+  font-size: 1em;
+  color: #bbb;
+  line-height: 1.6;
+  margin-bottom: 10px;
+}
+
 footer {
   background: #888;
   margin-top: 100px;
