--- a/style.css
+++ b/style.css
@@ -13,15 +13,9 @@ body {
 }
 
 .header {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  display: flex;
+  position: fixed;
   align-items: center;
   width: 100%;
-}
-.header .logo {
-  width: 100px;
 }
 .header .nav {
   position: fixed;
@@ -29,6 +23,17 @@ body {
   margin-left: 50px;
   left: 30px;
   bottom: 50px;
+  display: block;
+}
+.header .nav .logo {
+  width: 100px;
+}
+.header .nav .logo img {
+  width: 100px;
+}
+.header .nav hr {
+  width: 70px;
+  background: #e96669;
 }
 .header .nav ul {
   display: flex;
@@ -63,9 +68,10 @@ body {
 }
 .hero-section .animation-container {
   position: relative;
-  width: 400px;
+  width: 800px;
   height: 570px;
   overflow: hidden;
+  margin: 0 50px;
 }
 .hero-section .animation-container .slide {
   position: absolute;
