--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@ $primary-color: #0056b3;
 $secondary-color: #f5f5f5;
 $text-color: #333;
 $background-color: #ffffff;
+$light-red: #e96669;
 $text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.9);
 $gray-shadow: 2px 2px 3px rgba(90, 90, 90, 0.9);
 $box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
@@ -32,16 +33,11 @@ body {
 }
 
 .header {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    display: flex;
+    position: fixed;
     align-items: center;
     width: 100%;
 
-    .logo {
-        width: 100px;
-    }
+   
 
     .nav {
         position: fixed;
@@ -49,6 +45,20 @@ body {
         margin-left: 50px;
         left: 30px;
         bottom: 50px;
+        display: block;
+
+        .logo {
+            width: 100px;
+    
+            img {
+                width: 100px;
+            }
+        }
+    
+        hr {
+            width: 70px;
+            background: $light-red;
+        }
 
         ul {
             display: flex;
@@ -91,9 +101,10 @@ body {
     // 動畫區域
     .animation-container {
         position: relative;
-        width: 400px;
+        width: 800px;
         height: 570px;
         overflow: hidden;
+        margin: 0 50px;
 
         .slide {
             position: absolute;
