--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ body {
   color: #000;
 }
 .hero-section .hero-content .btn-primary {
-  background-color: #0056b3;
+  background-color: #e96669;
   color: #ffffff;
   padding: 15px 30px;
   border-radius: 5px;
@@ -118,7 +118,7 @@ body {
   transition: background 0.3s ease;
 }
 .hero-section .hero-content .btn-primary:hover {
-  background-color: #003d80;
+  background-color: #e3393d;
 }
 
 .services-section {
@@ -140,7 +140,7 @@ body {
 }
 .services-section .service h3 {
   font-size: 1.5rem;
-  color: #0056b3;
+  color: #e96669;
   margin-bottom: 15px;
 }
 .services-section .service p {
@@ -160,7 +160,7 @@ body {
   margin: 20px;
   padding: 30px;
   border-radius: 8px;
-  background-color: #0056b3;
+  background-color: #e96669;
   color: #ffffff;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
@@ -229,13 +229,14 @@ body {
 }
 .contact-section .contact-form button {
   padding: 15px 30px;
-  background-color: #0056b3;
+  background-color: #e96669;
   color: #ffffff;
   border: none;
   border-radius: 5px;
   font-size: 1.1rem;
   cursor: pointer;
   transition: background 0.3s ease;
+  width: 100%;
 }
 .contact-section .contact-form button:hover {
   background-color: #003d80;
