--- a/style.scss
+++ b/style.scss
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap");
 
 // 顏色設定
-$primary-color: #0056b3;
 $secondary-color: #f5f5f5;
 $text-color: #333;
 $background-color: #ffffff;
 $light-red: #e96669;
+$dark-red: #d02b2f;
 $text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.9);
 $gray-shadow: 2px 2px 3px rgba(90, 90, 90, 0.9);
 $box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6);
@@ -37,8 +37,6 @@ body {
     align-items: center;
     width: 100%;
 
-   
-
     .nav {
         position: fixed;
         flex-grow: 1;
@@ -49,12 +47,12 @@ body {
 
         .logo {
             width: 100px;
-    
+
             img {
                 width: 100px;
             }
         }
-    
+
         hr {
             width: 70px;
             background: $light-red;
@@ -96,7 +94,6 @@ body {
     text-align: center;
     max-width: 900px;
     margin: 0 auto;
-
 
     // 動畫區域
     .animation-container {
@@ -171,7 +168,6 @@ body {
     max-width: 900px;
     margin: 0 auto;
 
-
     .service {
         margin: 20px 0;
         padding: 20px;
@@ -203,7 +199,6 @@ body {
     text-align: center;
     max-width: 900px;
     margin: 0 auto;
-
 
     .pricing-level {
         display: inline-block;
@@ -245,7 +240,6 @@ body {
     background-color: $secondary-color;
     max-width: 900px;
     margin: 0 auto;
-
 
     .portfolio-carousel {
         .portfolio-item {
@@ -305,7 +299,7 @@ body {
             width: 100%;
 
             &:hover {
-                background-color: darken($primary-color, 10%);
+                background-color: darken($light-red, 10%);
             }
         }
     }
@@ -313,26 +307,24 @@ body {
 
 // 頁尾區
 footer {
-    background: #888;
+    background: $dark-red;
     margin-top: 100px;
     padding: 50px;
     text-align: center;
 
-    .logo {
+    p {
         color: $background-color;
-        font-size: 14px;
-        padding: 10px 0;
-        text-decoration: none;
     }
 
-    #link {
-        padding: 1px 0;
+    .footer-links {
+        list-style-type: none;
 
         a {
             color: $background-color;
             text-decoration: none;
             font-size: 14px;
             padding: 0 5px;
+            text-decoration: none;
 
             @media screen and (max-width: $mobile) {
                 display: block;
