--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
   flex-grow: 1;
   margin-left: 50px;
   left: 30px;
-  bottom: 50px;
+  top: 50px;
   display: block;
 }
 .header .nav .logo {
@@ -123,11 +123,14 @@ body {
 
 .services-section {
   padding: 60px 0;
-  background-color: #f5f5f5;
   max-width: 900px;
   margin: 0 auto;
 }
-.services-section .service {
+.services-section .container {
+  display: grid;
+  grid-template-columns: 30%, 30%, 30%;
+}
+.services-section .container .service {
   margin: 20px 0;
   padding: 20px;
   border-radius: 5px;
@@ -135,15 +138,15 @@ body {
   background-color: #ffffff;
   transition: transform 0.3s ease;
 }
-.services-section .service:hover {
+.services-section .container .service:hover {
   transform: translateY(-10px);
 }
-.services-section .service h3 {
+.services-section .container .service h3 {
   font-size: 1.5rem;
   color: #e96669;
   margin-bottom: 15px;
 }
-.services-section .service p {
+.services-section .container .service p {
   font-size: 1rem;
   color: #333;
 }
