--- a/style.scss
+++ b/style.scss
@@ -42,7 +42,7 @@ body {
         flex-grow: 1;
         margin-left: 50px;
         left: 30px;
-        bottom: 50px;
+        top: 50px;
         display: block;
 
         .logo {
@@ -161,34 +161,79 @@ body {
     }
 }
 
+// About Section
+.about-section {
+    padding: 80px 0;
+    background-color: $secondary-color; // 柔和的背景色
+  
+    .about-content {
+      text-align: center;
+      max-width: 800px;
+      margin: 0 auto;
+  
+      .section-title {
+        font-size: 2rem;
+        color: $primary-color;
+        margin-bottom: 20px;
+      }
+  
+      .about-text {
+        font-size: 1.2rem;
+        color: $text-color;
+        line-height: 1.8;
+        margin-bottom: 30px;
+      }
+  
+      .btn-secondary {
+        display: inline-block;
+        padding: 12px 25px;
+        background-color: darken($primary-color, 5%);
+        color: $background-color;
+        font-size: 1rem;
+        font-weight: 600;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+  
+        &:hover {
+          background-color: darken($primary-color, 15%);
+        }
+      }
+    }
+  }
+  
+
 // Services Section
 .services-section {
     padding: $padding-section 0;
-    background-color: $secondary-color;
     max-width: 900px;
     margin: 0 auto;
 
-    .service {
-        margin: 20px 0;
-        padding: 20px;
-        border-radius: 5px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        background-color: $background-color;
-        transition: transform 0.3s ease;
+    .container {
+        display: grid;
+        grid-template-columns: (30%,30%,30%);
 
-        &:hover {
-            transform: translateY(-10px);
-        }
+        .service {
+            margin: 20px 0;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background-color: $background-color;
+            transition: transform 0.3s ease;
 
-        h3 {
-            font-size: 1.5rem;
-            color: $light-red;
-            margin-bottom: 15px;
-        }
+            &:hover {
+                transform: translateY(-10px);
+            }
 
-        p {
-            font-size: 1rem;
-            color: $text-color;
+            h3 {
+                font-size: 1.5rem;
+                color: $light-red;
+                margin-bottom: 15px;
+            }
+
+            p {
+                font-size: 1rem;
+                color: $text-color;
+            }
         }
     }
 }
