--- a/style.scss
+++ b/style.scss
@@ -168,7 +168,6 @@ body {
     max-width: 900px;
     margin: 0 auto;
 
-
     .section-title {
         text-align: center;
         font-size: 1.8rem;
@@ -252,34 +251,52 @@ body {
 // Services Section
 .services-section {
     padding: $padding-section 0;
-    max-width: 900px;
-    margin: 0 auto;
+    text-align: center;
+    background-color: $secondary-color;
 
-    .container {
-        display: grid;
-        grid-template-columns: (30%, 30%, 30%);
+    .section-title {
+        font-size: 2rem;
+        color: $light-red;
+        margin-bottom: 40px;
+    }
 
-        .service {
-            margin: 20px 0;
-            padding: 20px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            background-color: $background-color;
-            transition: transform 0.3s ease;
+    .service-items {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
 
-            &:hover {
-                transform: translateY(-10px);
+        .service-item {
+            flex: 1;
+            max-width: 300px;
+            margin: 0 10px;
+            text-align: center;
+
+            .icon-container {
+                width: 100px;
+                height: 100px;
+                margin: 0 auto 20px;
+                background-color: lighten($light-red, 45%);
+                clip-path: polygon(50% 0%, 93% 25%, 93% 75%, 50% 100%, 7% 75%, 7% 25%); // 六邊形
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                img {
+                    width: 50%;
+                    height: auto;
+                }
             }
 
             h3 {
-                font-size: 1.5rem;
+                font-size: 1.3rem;
                 color: $light-red;
-                margin-bottom: 15px;
+                margin: 10px 0;
             }
 
             p {
-                font-size: 1rem;
+                font-size: 0.95rem;
                 color: $text-color;
+                line-height: 1.6;
             }
         }
     }
