--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ body {
 .about-section .about-content .about-icons .icon-box {
   text-align: center;
   max-width: 180px;
+  height: 300px;
   background-color: white;
   border-radius: 8px;
   padding: 20px;
@@ -199,6 +200,8 @@ body {
   padding: 60px 0;
   text-align: center;
   background-color: #f5f5f5;
+  max-width: 900px;
+  margin: 0 auto;
 }
 .services-section .section-title {
   font-size: 2rem;
@@ -250,7 +253,7 @@ body {
 }
 .pricing-section .pricing-level {
   display: inline-block;
-  width: 300px;
+  width: 200px;
   margin: 20px;
   padding: 30px;
   border-radius: 8px;
@@ -263,8 +266,9 @@ body {
   transform: translateY(-10px);
 }
 .pricing-section .pricing-level h3 {
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   margin-bottom: 10px;
+  font-weight: bolder;
 }
 .pricing-section .pricing-level p,
 .pricing-section .pricing-level span {
