--- a/style.scss
+++ b/style.scss
@@ -216,6 +216,7 @@ body {
             .icon-box {
                 text-align: center;
                 max-width: 180px;
+                height: 300px;
                 background-color: lighten($light-red, 45%);
                 border-radius: 8px;
                 padding: 20px;
@@ -253,6 +254,8 @@ body {
     padding: $padding-section 0;
     text-align: center;
     background-color: $secondary-color;
+    max-width: 900px;
+    margin: 0 auto;
 
     .section-title {
         font-size: 2rem;
@@ -302,6 +305,81 @@ body {
     }
 }
 
+// Process Section區
+.process-section {
+    padding: $padding-section 0;
+    text-align: center;
+  
+    .section-title {
+      font-size: 2rem;
+      color: $primary-color;
+      margin-bottom: 40px;
+    }
+  
+    .process-steps {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 40px;
+      max-width: 900px;
+      margin: auto;
+      position: relative;
+  
+      .step {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 150px;
+        text-align: center;
+  
+        .circle {
+          width: 60px;
+          height: 60px;
+          background-color: $primary-color;
+          color: $background-color;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 1.2rem;
+          font-weight: 700;
+          margin-bottom: 15px;
+        }
+  
+        .highlight {
+          background-color: #b0b0b0; // 中間灰色的步驟
+        }
+  
+        .step-content {
+          h3 {
+            font-size: 1.1rem;
+            color: $text-color;
+            margin-bottom: 5px;
+          }
+  
+          p {
+            font-size: 0.9rem;
+            color: darken($text-color, 20%);
+            line-height: 1.5;
+          }
+        }
+      }
+  
+      // 圖示箭頭
+      .step:not(:last-child)::after {
+        content: '';
+        width: 50px;
+        height: 2px;
+        background-color: #aaa;
+        position: absolute;
+        top: 35px;
+        left: 105px;
+        transform: rotate(45deg);
+      }
+    }
+  }
+  
+
 // Pricing Section區
 .pricing-section {
     padding: $padding-section 0;
@@ -309,9 +387,10 @@ body {
     max-width: 900px;
     margin: 0 auto;
 
+
     .pricing-level {
         display: inline-block;
-        width: 300px;
+        width: 200px;
         margin: 20px;
         padding: 30px;
         border-radius: 8px;
@@ -325,8 +404,9 @@ body {
         }
 
         h3 {
-            font-size: 1.3rem;
+            font-size: 1.6rem;
             margin-bottom: 10px;
+            font-weight: bolder;
         }
 
         p,
