--- a/style.scss
+++ b/style.scss
@@ -312,7 +312,7 @@ body {
   
     .section-title {
       font-size: 2rem;
-      color: $primary-color;
+      color: $light-red;
       margin-bottom: 40px;
     }
   
@@ -335,7 +335,7 @@ body {
         .circle {
           width: 60px;
           height: 60px;
-          background-color: $primary-color;
+          background-color: $light-red;
           color: $background-color;
           border-radius: 50%;
           display: flex;
